# newStart

./: CMakeLists.txt  GridKeysValues.hpp  GridShamansFinder.cpp  Makefile  MapReduceClientUser.cpp  MapReduceClientUser.h  MapReduceFramework.cpp  MapReduceFramework.h  MapReduceSearch.cpp  MapReduceSearch.h  MapReduceSearch_BACKUP_14807.cpp  Search  Search.cpp  WordFrequencies.cpp  WordFrequenciesClient.hpp  check.cpp  fixes to change  mainProgram.cpp  test.cpp
Test_28/: test28
Test_28/scripts/: Inglourious_Basterds_test_results  basterds.txt  res.txt
Test_6/grids/: check.txt
grids/: grid125_test_results  grid5_test_results
